added models and tests for tables with prefixes

--- a/tests/fixtures/posts.yml
+++ b/tests/fixtures/posts.yml
@@ -2,6 +2,7 @@ first_post:
   id: 1
   title: First Post
   body: Hi, this is my first post. Enjoy!
+  author_id: 1
 second_post:
   id: 2
   title: Second Post
